--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,15 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.chatapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -24,10 +28,22 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.jakewharton:butterknife:10.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.firebaseui:firebase-ui-database:4.3.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+//    implementation "com.squareup.okhttp3:okhttp:4.2.1"
+    implementation 'com.iceteck.silicompressorr:silicompressor:2.2.2'
+    implementation 'id.zelory:compressor:2.1.0'
 
 
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
