--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,14 +36,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.firebaseui:firebase-ui-database:4.3.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-//    implementation "com.squareup.okhttp3:okhttp:4.2.1"
     implementation 'com.iceteck.silicompressorr:silicompressor:2.2.2'
     implementation 'id.zelory:compressor:2.1.0'
 
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
-
     implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
